Add frontend app and E2E tests

--- a/docs/03.requirements.md
+++ b/docs/03.requirements.md
@@ -56,6 +56,7 @@
 - 再利用性を意識して、適切にコンポーネント分割する。
 - `base/` から `front/` へのコピーは開発開始時の1回のみ。以後は `front/` のみを更新する。
 - コピー作業は開発開始担当が実施し、`base/` 変更は追随しない前提。
+- 開発開始時は必ずブランチを切って作業する。
 
 ## ログ仕様（最低限）
 - 重要操作（ログイン/ログアウト/投稿/編集/削除）を `console.info` で記録。
