--- a/docs/04.e2e-cases.md
+++ b/docs/04.e2e-cases.md
@@ -5,6 +5,16 @@
 - ログイン済/未ログインの状態を切り替えられる手段を用意する。
 - 「レポート0件」ケースはデータ初期化で再現する。
 
+## 実行方法
+- 初回のみ: `cd front && npx playwright install`
+- `cd front && npm run test:e2e`
+- UIモード: `cd front && npm run test:e2e:ui`
+- レポート表示: `cd front && npm run test:e2e:report`
+- 既存サーバーを使う場合: `PLAYWRIGHT_BASE_URL=http://127.0.0.1:3000 npm run test:e2e`
+
+## テストデータ注入
+- 各テストで `localStorage` の `espresso_reports` / `espresso_user` を初期化して前提状態を作成する。
+
 ## 画面×観点マトリクス（前提/手順/期待）
 
 ### 一覧（/）
