Add Supabase auth integration

--- a/docs/03.requirements.md
+++ b/docs/03.requirements.md
@@ -35,6 +35,7 @@
 ## 技術スタック
 - TypeScript + React + TailwindCSS
 - Markdown: react-markdown + remark-gfm + rehype-sanitize（画像/外部リンクを許可）
+- 認証: Supabase Auth（本番接続）
 
 ## セキュリティ詳細（Markdown）
 - `a` は `rel="noopener noreferrer"` を付与し、`target="_blank"` を許可。
@@ -44,8 +45,8 @@
 - 対象ディレクトリ: `front/` のみ（`base/` は対象外）。
 - ブランチ: `main` のみ自動デプロイ。
 - プレビュー: 不要。
-- 環境変数: 現状は不要（必要になれば追加）。
-- ビルド: Vite標準（`npm install` → `npm run build`）。
+- 環境変数: Supabase接続用の `NEXT_PUBLIC_SUPABASE_URL` / `NEXT_PUBLIC_SUPABASE_ANON_KEY` を設定。
+- ビルド: Next.js標準（`npm install` → `npm run build`）。
 
 ## コーディング規約（案）
 - 2スペースインデント、セミコロンあり（既存コード準拠）。
