--- a/docs/04.e2e-cases.md
+++ b/docs/04.e2e-cases.md
@@ -14,6 +14,7 @@
 
 ## テストデータ注入
 - 各テストで `localStorage` の `espresso_reports` / `espresso_user` を初期化して前提状態を作成する。
+- E2E実行時は `NEXT_PUBLIC_AUTH_MODE=local` を使い、Authをローカルモードで動作させる。
 
 ## 画面×観点マトリクス（前提/手順/期待）
 
