Update Prisma schema and data integration

--- a/docs/04.e2e-cases.md
+++ b/docs/04.e2e-cases.md
@@ -15,6 +15,7 @@
 ## テストデータ注入
 - 各テストで `localStorage` の `espresso_reports` / `espresso_user` を初期化して前提状態を作成する。
 - E2E実行時は `NEXT_PUBLIC_AUTH_MODE=local` を使い、Authをローカルモードで動作させる。
+- E2E実行時は `NEXT_PUBLIC_DATA_MODE=local` を使い、Reportデータをローカルモードで動作させる。
 
 ## 画面×観点マトリクス（前提/手順/期待）
 
@@ -57,7 +58,7 @@
   - 期待: `/login` にリダイレクト
 - 必須入力
   - 前提: ログイン済
-  - 手順: タイトル/要約/本文未入力で送信
+  - 手順: タイトル/本文/カテゴリ/著者/タグ未入力で送信
   - 期待: 送信できない/バリデーション表示
 - 確認モーダル
   - 前提: ログイン済
@@ -168,10 +169,10 @@
   - 手順: タイトル/要約/本文未入力で送信
   - 期待: 送信不可/エラーメッセージ
 
-- TC-013 準正常: タグ未入力
+- TC-013 異常: タグ未入力
   - 前提: ログイン済
-  - 手順: タグ空で投稿
-  - 期待: tags = []、表示は空
+  - 手順: タグ未入力で投稿
+  - 期待: 送信不可/バリデーション表示
 
 - TC-014 準正常: タグ正規化
   - 前提: ログイン済
