--- a/docs/03.requirements.md
+++ b/docs/03.requirements.md
@@ -12,16 +12,19 @@
 - 認証: 管理者がログイン/ログアウトできる。
 
 ## データ要件
-- Report: `id`, `title`, `summary`, `content`, `category`, `author`, `date`, `tags`
-- User: `id`, `username`, `role`（`admin`）
-- 必須項目: title/summary/content/category/date
+- Report: `id`, `title`, `summary`, `content`, `category`, `author`, `publishDate`, `tags`
+- User: Supabase Auth を利用（アプリ側のUserテーブルは持たない）
+- 必須項目: title/content/category/author/tags
 - タグ入力はカンマ区切り → `#` 付き配列に正規化
 - DB設計は現状のままでOK。Supabase設定は別プロジェクトで実施する。
-- Prismaはスキーマ取得（`prisma db pull`）のみを前提とする。
+- Prismaは既存テーブルを `prisma db pull` で取得し、新規テーブル設計は `schema.prisma` に反映（マイグレーションは行わない）。
+- 環境変数: `DATABASE_URL`（Supabase Postgres 接続）
+  - `prisma.config.ts` で `DATABASE_URL` を参照し、`schema.prisma` には接続文字列を置かない。
 
 ## 権限/アクセス
 - 未ログイン: 閲覧のみ
 - ログイン: 投稿/編集/削除が可能
+  - RLS方針: Reportは公開閲覧、認証ユーザーのみ書き込み可能
 
 ## 非機能要件
 - デプロイ: 本番運用はVercelで実施（デプロイ必須）。
@@ -30,6 +33,7 @@
 - E2Eテストは正常/準正常/異常をすべて必須とする。
 - 監視/ログ: ユニットテスト無しでも不具合を早期発見できるログ設計を意識する。
 - セキュリティ: Markdown表示はサニタイズ必須。
+- セキュリティ: Supabase RLSは「公開閲覧 + 認証ユーザーのみ書き込み」を採用する。
 - ログ出力: 開発/本番とも `console` のみ。本番はセキュリティ配慮（個人情報/機密を出力しない）。
 
 ## 技術スタック
