--- a/docs/02.ui-layout.md
+++ b/docs/02.ui-layout.md
@@ -24,7 +24,7 @@
 - パンくず的な「All Reports」リンクとカテゴリバッジを表示。
 - タイトル、著者名、日付を表示。
 - ログイン時のみ「編集」「削除」アクションを表示。
-- 本文はMarkdownライクな簡易レンダリング（見出し/リスト/改行）。
+- 本文はMarkdownをサニタイズして表示（見出し/リスト/改行など）。
 - タグはフッター領域でチップ表示。
 - 削除は確認モーダルを挟む。
 
@@ -45,8 +45,8 @@
 - ボタンは太字・大文字・間隔広めのラベル。
 
 ## データ/状態（現行の挙動）
-- レポートとログイン情報は `localStorage` に保存。
-- 初期データは `base/constants.tsx` の `INITIAL_REPORTS` を使用。
+- E2E/ローカル動作時は `localStorage` を使用。
+- 本番はSupabaseデータを表示し、初期ダミーデータは表示しない。
 
 ## ルーティング
 - `/` 一覧
@@ -56,8 +56,8 @@
 - `/login` ログイン
 
 ## 差分（01.pre-requirements.md → 最新UI）
-- アーキテクチャ想定（Next.js/TS/TailwindCSS/Supabase）に対し、現状はVite + Reactのフロント単体で画面レイアウトを先行。
+- アーキテクチャ想定（Next.js/TS/TailwindCSS/Supabase）に沿ってApp Routerで実装。
 - レポート閲覧中心の要件は維持しつつ、ログイン/投稿/編集/削除までのUIをフロントで具現化。
-- Markdown表示はサニタイズ済みの外部ライブラリではなく、簡易パーサでの表現に留める。
+- Markdown表示は `react-markdown` + `remark-gfm` + `rehype-sanitize` で安全に表示。
 - 公開範囲/権限（public/auth/admin）は将来想定だが、現状はログイン有無のみで制御。
 - 画面構成は一覧/詳細/投稿/編集/ログインの5画面に確定。
