--- a/docs/03.requirements.md
+++ b/docs/03.requirements.md
@@ -20,6 +20,7 @@
 - Prismaは既存テーブルを `prisma db pull` で取得し、新規テーブル設計は `schema.prisma` に反映（マイグレーションは行わない）。
 - 環境変数: `DATABASE_URL`（Supabase Postgres 接続）
   - `prisma.config.ts` で `DATABASE_URL` を参照し、`schema.prisma` には接続文字列を置かない。
+- E2Eは `NEXT_PUBLIC_AUTH_MODE=local` / `NEXT_PUBLIC_DATA_MODE=local` を使用してローカルデータを利用する。
 
 ## 権限/アクセス
 - 未ログイン: 閲覧のみ
@@ -29,6 +30,7 @@
 ## 非機能要件
 - デプロイ: 本番運用はVercelで実施（デプロイ必須）。
 - CI/CD: 自動デプロイのみ（Vercel連携を前提）。`main` ブランチのみ、本番デプロイ。プレビューは不要。
+- CI: GitHub ActionsでE2E（Playwright）を自動実行する。
 - テスト: E2Eテストでカバーし、ユニットテストは行わない。
 - E2Eテストは正常/準正常/異常をすべて必須とする。
 - 監視/ログ: ユニットテスト無しでも不具合を早期発見できるログ設計を意識する。
@@ -37,7 +39,7 @@
 - ログ出力: 開発/本番とも `console` のみ。本番はセキュリティ配慮（個人情報/機密を出力しない）。
 
 ## 技術スタック
-- TypeScript + React + TailwindCSS
+- TypeScript + Next.js (App Router) + React + TailwindCSS
 - Markdown: react-markdown + remark-gfm + rehype-sanitize（画像/外部リンクを許可）
 - 認証: Supabase Auth（本番接続）
 
@@ -56,7 +58,7 @@
 - 2スペースインデント、セミコロンあり（既存コード準拠）。
 - ReactコンポーネントはPascalCase、ユーティリティはcamelCase。
 - `base/` は読み取り専用とし、実装は `front/` に `base/` をコピーして行う。
-- 画面は `front/pages/`、共通UIは `front/components/` に配置。
+- 画面は `front/src/app/`（App Router）、共通UIは `front/src/components/` に配置。
 - Tailwindクラスは既存の並びに合わせて読みやすさ優先で記述。
 - 再利用性を意識して、適切にコンポーネント分割する。
 - `base/` から `front/` へのコピーは開発開始時の1回のみ。以後は `front/` のみを更新する。
