--- a/docs/04.e2e-cases.md
+++ b/docs/04.e2e-cases.md
@@ -12,6 +12,10 @@
 - レポート表示: `cd front && npm run test:e2e:report`
 - 既存サーバーを使う場合: `PLAYWRIGHT_BASE_URL=http://127.0.0.1:3000 npm run test:e2e`
 
+## CI（GitHub Actions）
+- `front/playwright.config.ts` により、CIでは `NEXT_PUBLIC_AUTH_MODE=local` / `NEXT_PUBLIC_DATA_MODE=local` で起動する。
+- Supabaseクライアント初期化のため、CIでは `NEXT_PUBLIC_SUPABASE_URL` / `NEXT_PUBLIC_SUPABASE_ANON_KEY` をダミー値で渡す。
+
 ## テストデータ注入
 - 各テストで `localStorage` の `espresso_reports` / `espresso_user` を初期化して前提状態を作成する。
 - E2E実行時は `NEXT_PUBLIC_AUTH_MODE=local` を使い、Authをローカルモードで動作させる。
