Update docs and user name

--- a/docs/02.ui-layout.md
+++ b/docs/02.ui-layout.md
@@ -10,15 +10,18 @@
 ## グローバルレイアウト
 - ヘッダー＋サイドバー＋メイン＋フッターの2カラム構成。
 - ヘッダーは固定表示（sticky）で、未ログイン時はログインボタン、ログイン時は「New Post」とユーザー情報＋Logoutを表示。
-- サイドバーはPC表示のみ（`md`以上）でカテゴリとトレンドタグ、編集者メモを表示。
+- サイドバーはPC表示のみ（`md`以上）でカテゴリとタグ一覧、編集者メモを表示。
+  - カテゴリは固定リスト（Development / AI / Cloud / Linux / Container / Application / Program / Hobby）。
 - ログイン画面のみ、ヘッダー/サイドバー/フッターを非表示で全画面センタリング。
 
 ## 画面: 一覧（/）
-- 画面上部にタイトル「Latest Reports」と説明文。
+- 画面上部にタイトル「Latest Reports」を表示（説明文は無し）。
 - レポートは2カラムカード（`lg`以上）で表示。
   - カテゴリバッジ、日付、タイトル、要約、著者名を含む。
   - 「Read Report →」リンクで詳細へ遷移。
 - レポートが0件の場合は「No reports found.」を中央表示。
+- サイドバーのカテゴリ/タグをクリックすると一覧をフィルター（再クリックで解除）。
+- 一覧へ戻るとカテゴリ/タグフィルターはリセットされる。
 
 ## 画面: 詳細（/report/:id）
 - パンくず的な「All Reports」リンクとカテゴリバッジを表示。
@@ -35,9 +38,11 @@
 - 未ログイン時はログイン画面へリダイレクト。
 
 ## 画面: ログイン（/login）
-- ユーザー名とパスワード入力、Authenticateボタン。
-- 入力が揃えばログイン成功（現状は簡易認証）。
-- 文言は英語、コンポーネントはカード中央配置。
+- ローカル認証時はメール/パスワード入力、Authenticateボタン。
+- OAuth時はGoogleログインボタンのみ。
+- 管理者メールは環境変数（`NEXT_PUBLIC_ADMIN_EMAIL` / `ADMIN_EMAIL`）の一致のみ許可。
+- 失敗時はエラーメッセージを表示。
+- 文言は日本語中心、コンポーネントはカード中央配置。
 
 ## UIトーン/スタイル
 - 深いブラウン系のハイコントラストデザイン。
