--- a/docs/04.e2e-cases.md
+++ b/docs/04.e2e-cases.md
@@ -28,6 +28,14 @@
   - 前提: レポートが1件以上ある
   - 手順: `/` を開く
   - 期待: カードにカテゴリ/日付/タイトル/要約/著者が表示
+- フィルタ（カテゴリ）
+  - 前提: 複数カテゴリのレポートが存在
+  - 手順: サイドバーのカテゴリをクリック
+  - 期待: 一覧が該当カテゴリのみ表示、再クリックで解除
+- フィルタ（タグ）
+  - 前提: 複数タグのレポートが存在
+  - 手順: サイドバーのタグをクリック
+  - 期待: 一覧が該当タグのみ表示、再クリックで解除
 - 空表示
   - 前提: レポート0件
   - 手順: `/` を開く
@@ -100,6 +108,10 @@
   - 前提: 未ログイン
   - 手順: ユーザー名/パスワード入力 → 送信
   - 期待: `/` に遷移、ヘッダーにユーザー表示
+- 失敗（許可メール不一致）
+  - 前提: 未ログイン
+  - 手順: 許可外メールでログイン
+  - 期待: エラーメッセージ表示、ログイン不可
 
 ### 削除/ログアウト
 - 削除確認
@@ -128,6 +140,16 @@
   - 手順: `/` を開く
   - 期待: “No reports found.” 表示
 
+- TC-003-2 正常: カテゴリフィルタ
+  - 前提: 複数カテゴリのレポートが存在
+  - 手順: サイドバーのカテゴリをクリック
+  - 期待: 該当カテゴリのみ表示、再クリックで解除
+
+- TC-003-3 正常: タグフィルタ
+  - 前提: 複数タグのレポートが存在
+  - 手順: サイドバーのタグをクリック
+  - 期待: 該当タグのみ表示、再クリックで解除
+
 - TC-004 正常: 詳細表示
   - 前提: 該当IDが存在
   - 手順: `/report/:id` を開く
@@ -152,6 +174,11 @@
   - 前提: 未ログイン
   - 手順: 空入力で送信
   - 期待: 認証不可/遷移なし
+
+- TC-008-2 異常: 許可メール不一致
+  - 前提: 未ログイン
+  - 手順: 許可外メールでログイン
+  - 期待: エラーメッセージ表示、ログイン不可
 
 - TC-009 異常: 未ログインで新規作成直アクセス
   - 前提: 未ログイン
