--- a/docs/03.requirements.md
+++ b/docs/03.requirements.md
@@ -6,6 +6,7 @@
 
 ## 機能要件（ユーザーストーリー）
 - 一覧: レポートの概要・著者・日付・カテゴリを閲覧し、詳細へ遷移できる。
+- 一覧: カテゴリ/タグでレポートをフィルタできる（再クリックで解除、一覧復帰時はリセット）。
 - 詳細: Markdown本文とタグを閲覧できる。管理者は編集/削除できる（削除は確認モーダル必須）。
 - 新規作成: 管理者がレポートを作成し、投稿前に確認できる。
 - 編集: 管理者がレポートを更新し、保存前に確認できる。
@@ -16,6 +17,8 @@
 - User: Supabase Auth を利用（アプリ側のUserテーブルは持たない）
 - 必須項目: title/content/category/author/tags
 - タグ入力はカンマ区切り → `#` 付き配列に正規化
+- カテゴリは固定リスト（Development / AI / Cloud / Linux / Container / Application / Program / Hobby）。
+- サイドバーに表示するタグは `ReportTag` テーブルを参照し、一覧フィルタに使用する。
 - DB設計は現状のままでOK。Supabase設定は別プロジェクトで実施する。
 - Prismaは既存テーブルを `prisma db pull` で取得し、新規テーブル設計は `schema.prisma` に反映（マイグレーションは行わない）。
 - 環境変数: `DATABASE_URL`（Supabase Postgres 接続）
@@ -26,6 +29,7 @@
 - 未ログイン: 閲覧のみ
 - ログイン: 投稿/編集/削除が可能
   - RLS方針: Reportは公開閲覧、認証ユーザーのみ書き込み可能
+- 管理者メールは環境変数 `NEXT_PUBLIC_ADMIN_EMAIL` / `ADMIN_EMAIL` の一致のみ許可（複数指定はカンマ区切り）。
 
 ## 非機能要件
 - デプロイ: 本番運用はVercelで実施（デプロイ必須）。
