Update docs and add filter e2e coverage

--- a/docs/02.ui-layout.md
+++ b/docs/02.ui-layout.md
@@ -10,7 +10,7 @@
 ## グローバルレイアウト
 - ヘッダー＋サイドバー＋メイン＋フッターの2カラム構成。
 - ヘッダーは固定表示（sticky）で、未ログイン時はログインボタン、ログイン時は「New Post」とユーザー情報＋Logoutを表示。
-- サイドバーはPC表示のみ（`md`以上）でカテゴリとタグ一覧、編集者メモを表示。
+- サイドバーはPC表示のみ（`md`以上）でカテゴリとタグ一覧、Director's Manifestoを表示。
   - カテゴリは固定リスト（Development / AI / Cloud / Linux / Container / Application / Program / Hobby）。
 - ログイン画面のみ、ヘッダー/サイドバー/フッターを非表示で全画面センタリング。
 
@@ -19,6 +19,7 @@
 - レポートは2カラムカード（`lg`以上）で表示。
   - カテゴリバッジ、日付、タイトル、要約、著者名を含む。
   - 「Read Report →」リンクで詳細へ遷移。
+- フィルタ適用中は、現在のカテゴリ/タグとクリアボタンを表示する。
 - レポートが0件の場合は「No reports found.」を中央表示。
 - サイドバーのカテゴリ/タグをクリックすると一覧をフィルター（再クリックで解除）。
 - 一覧へ戻るとカテゴリ/タグフィルターはリセットされる。
