--- a/docs/03.requirements.md
+++ b/docs/03.requirements.md
@@ -48,14 +48,15 @@
 - 認証: Supabase Auth（本番接続）
 
 ## セキュリティ詳細（Markdown）
-- `a` は `rel="noopener noreferrer"` を付与し、`target="_blank"` を許可。
-- `img` の `src` は `http/https` のみ許可。
+- Markdown表示は `rehype-sanitize` のデフォルトスキーマでサニタイズする。
+- `a`/`img` の許可属性は現状カスタム設定を行っていない（必要ならスキーマ拡張で対応する）。
 
 ## デプロイ設定（確定）
 - 対象ディレクトリ: `front/` のみ（`base/` は対象外）。
 - ブランチ: `main` のみ自動デプロイ。
 - プレビュー: 不要。
 - 環境変数: Supabase接続用の `NEXT_PUBLIC_SUPABASE_URL` / `NEXT_PUBLIC_SUPABASE_ANON_KEY` を設定。
+- 環境変数: OAuthリダイレクト用の `NEXT_PUBLIC_SITE_URL` を必要に応じて設定。
 - ビルド: Next.js標準（`npm install` → `npm run build`）。
 
 ## コーディング規約（案）
