--- a/docs/04.e2e-cases.md
+++ b/docs/04.e2e-cases.md
@@ -21,6 +21,11 @@
 - E2E実行時は `NEXT_PUBLIC_AUTH_MODE=local` を使い、Authをローカルモードで動作させる。
 - E2E実行時は `NEXT_PUBLIC_DATA_MODE=local` を使い、Reportデータをローカルモードで動作させる。
 
+## 現行の自動テスト実装範囲
+- 実装ファイル: `front/tests/e2e/app.spec.ts`
+- カバー済み: TC-001, TC-002, TC-003, TC-004, TC-005, TC-006, TC-007, TC-008, TC-009, TC-010, TC-011, TC-012, TC-013, TC-014, TC-015, TC-016, TC-017, TC-018, TC-019, TC-020
+- 未実装: なし
+
 ## 画面×観点マトリクス（前提/手順/期待）
 
 ### 一覧（/）
