Move admin email check to server

--- a/docs/02.ui-layout.md
+++ b/docs/02.ui-layout.md
@@ -41,7 +41,7 @@
 ## 画面: ログイン（/login）
 - ローカル認証時はメール/パスワード入力、Authenticateボタン。
 - OAuth時はGoogleログインボタンのみ。
-- 管理者メールは環境変数（`NEXT_PUBLIC_ADMIN_EMAIL` / `ADMIN_EMAIL`）の一致のみ許可。
+- 管理者メールは環境変数（`ADMIN_EMAIL`）の一致のみ許可。
 - 失敗時はエラーメッセージを表示。
 - 文言は日本語中心、コンポーネントはカード中央配置。
 
