--- a/docs/03.requirements.md
+++ b/docs/03.requirements.md
@@ -29,7 +29,7 @@
 - 未ログイン: 閲覧のみ
 - ログイン: 投稿/編集/削除が可能
   - RLS方針: Reportは公開閲覧、認証ユーザーのみ書き込み可能
-- 管理者メールは環境変数 `NEXT_PUBLIC_ADMIN_EMAIL` / `ADMIN_EMAIL` の一致のみ許可（複数指定はカンマ区切り）。
+- 管理者メールは環境変数 `ADMIN_EMAIL` の一致のみ許可（複数指定はカンマ区切り）。
 
 ## 非機能要件
 - デプロイ: 本番運用はVercelで実施（デプロイ必須）。
