Finalize v7 markdown design and secure style lab

--- a/docs/02.ui-layout.md
+++ b/docs/02.ui-layout.md
@@ -5,11 +5,11 @@
 ## 概要
 - `base/` の画面実装が最新のレイアウト定義。
 - 対象は「Markdownレポート閲覧・管理UI」。
-- 画面は一覧 / 詳細 / 新規作成 / 編集 / ログインで構成される。
+- 画面は一覧 / 詳細 / 新規作成 / 編集 / ログイン / Markdown Style Lab で構成される。
 
 ## グローバルレイアウト
 - ヘッダー＋サイドバー＋メイン＋フッターの2カラム構成。
-- ヘッダーは固定表示（sticky）で、未ログイン時はログインボタン、ログイン時は「New Post」とユーザー情報＋Logoutを表示。
+- ヘッダーは固定表示（sticky）で、未ログイン時はログインボタン、ログイン時は「New Post」「Markdown Lab」とユーザー情報＋Logoutを表示。
 - サイドバーはPC表示のみ（`md`以上）でカテゴリとタグ一覧、Director's Manifestoを表示。
   - カテゴリは固定リスト（Development / AI / Cloud / Linux / Container / Application / Program / Hobby）。
 - ログイン画面のみ、ヘッダー/サイドバー/フッターを非表示で全画面センタリング。
@@ -38,6 +38,11 @@
 - 送信前に確認モーダルを表示。
 - 未ログイン時はログイン画面へリダイレクト。
 
+## 画面: Markdown Style Lab（/report/markdown-lab）
+- Markdown表示デザインの調整用検証画面（Pattern 07を基準）。
+- 表示内容は詳細画面のMarkdown描画と同じスタイルを利用する。
+- 未ログイン時はログイン画面へリダイレクト（認証後のみアクセス可）。
+
 ## 画面: ログイン（/login）
 - ローカル認証時はメール/パスワード入力、Authenticateボタン。
 - OAuth時はGoogleログインボタンのみ。
@@ -59,6 +64,7 @@
 - `/report/:id` 詳細
 - `/report/new` 新規作成
 - `/report/:id/edit` 編集
+- `/report/markdown-lab` Markdownデザイン検証（認証必須）
 - `/login` ログイン
 
 ## 差分（01.pre-requirements.md → 最新UI）
@@ -66,4 +72,4 @@
 - レポート閲覧中心の要件は維持しつつ、ログイン/投稿/編集/削除までのUIをフロントで具現化。
 - Markdown表示は `react-markdown` + `remark-gfm` + `rehype-sanitize` で安全に表示。
 - 公開範囲/権限（public/auth/admin）は将来想定だが、現状はログイン有無のみで制御。
-- 画面構成は一覧/詳細/投稿/編集/ログインの5画面に確定。
+- 画面構成は一覧/詳細/投稿/編集/ログイン/Markdown Style Labの6画面に確定。
