--- a/docs/03.requirements.md
+++ b/docs/03.requirements.md
@@ -8,6 +8,7 @@
 - 一覧: レポートの概要・著者・日付・カテゴリを閲覧し、詳細へ遷移できる。
 - 一覧: カテゴリ/タグでレポートをフィルタできる（再クリックで解除、一覧復帰時はリセット）。
 - 詳細: Markdown本文とタグを閲覧できる。管理者は編集/削除できる（削除は確認モーダル必須）。
+- Markdown Style Lab: 管理者がMarkdown表示デザインを検証できる（`/report/markdown-lab`）。
 - 新規作成: 管理者がレポートを作成し、投稿前に確認できる。
 - 編集: 管理者がレポートを更新し、保存前に確認できる。
 - 認証: 管理者がログイン/ログアウトできる。
@@ -28,6 +29,7 @@
 ## 権限/アクセス
 - 未ログイン: 閲覧のみ
 - ログイン: 投稿/編集/削除が可能
+  - Markdown Style Lab（`/report/markdown-lab`）もログイン時のみアクセス可能
   - RLS方針: Reportは公開閲覧、認証ユーザーのみ書き込み可能
 - 管理者メールは環境変数 `ADMIN_EMAIL` の一致のみ許可（複数指定はカンマ区切り）。
 
