--- a/docs/04.e2e-cases.md
+++ b/docs/04.e2e-cases.md
@@ -23,7 +23,7 @@
 
 ## 現行の自動テスト実装範囲
 - 実装ファイル: `front/tests/e2e/app.spec.ts`
-- カバー済み: TC-001, TC-002, TC-003, TC-004, TC-005, TC-006, TC-007, TC-008, TC-009, TC-010, TC-011, TC-012, TC-013, TC-014, TC-015, TC-016, TC-017, TC-018, TC-019, TC-020
+- カバー済み: TC-001, TC-002, TC-003, TC-004, TC-005, TC-006, TC-007, TC-008, TC-009, TC-010, TC-011, TC-012, TC-013, TC-014, TC-015, TC-016, TC-017, TC-018, TC-019, TC-020, TC-021, TC-022
 - 未実装: なし
 
 ## 画面×観点マトリクス（前提/手順/期待）
@@ -127,6 +127,16 @@
   - 前提: ログイン済
   - 手順: Logout
   - 期待: `/login` に遷移、管理導線非表示
+
+### Markdown Style Lab（/report/markdown-lab）
+- アクセス制御
+  - 前提: 未ログイン
+  - 手順: `/report/markdown-lab` 直アクセス
+  - 期待: `/login` にリダイレクト
+- メニュー導線
+  - 前提: ログイン済
+  - 手順: ヘッダーの「Markdown Lab」をクリック
+  - 期待: `/report/markdown-lab` に遷移し、Lab画面が表示
 
 ## 詳細テストケース（ID/前提/手順/期待）
 
@@ -244,3 +254,13 @@
   - 前提: ログイン済
   - 手順: Logout
   - 期待: `/login` に遷移、管理導線非表示
+
+- TC-021 異常: 未ログインでMarkdown Style Lab直アクセス
+  - 前提: 未ログイン
+  - 手順: `/report/markdown-lab`
+  - 期待: `/login` にリダイレクト
+
+- TC-022 正常: ログイン時にMarkdown Lab導線を利用可能
+  - 前提: ログイン済
+  - 手順: ヘッダーの「Markdown Lab」をクリック
+  - 期待: `/report/markdown-lab` に遷移し、Pattern 07 の表示を確認できる
