Add list pagination and e2e coverage

--- a/docs/02.ui-layout.md
+++ b/docs/02.ui-layout.md
@@ -19,6 +19,8 @@
 - レポートは2カラムカード（`lg`以上）で表示。
   - カテゴリバッジ、日付、タイトル、要約、著者名を含む。
   - 「Read Report →」リンクで詳細へ遷移。
+- 一覧のレポート表示は1ページ10件。
+- ページャーは「前へ」「次へ」とページ番号を表示し、ページ番号ボタンは最大5個まで表示する。
 - フィルタ適用中は、現在のカテゴリ/タグとクリアボタンを表示する。
 - レポートが0件の場合は「No reports found.」を中央表示。
 - サイドバーのカテゴリ/タグをクリックすると一覧をフィルター（再クリックで解除）。
