--- a/docs/03.requirements.md
+++ b/docs/03.requirements.md
@@ -7,6 +7,7 @@
 ## 機能要件（ユーザーストーリー）
 - 一覧: レポートの概要・著者・日付・カテゴリを閲覧し、詳細へ遷移できる。
 - 一覧: カテゴリ/タグでレポートをフィルタできる（再クリックで解除、一覧復帰時はリセット）。
+- 一覧: ページングできる（1ページ10件、ページ番号は最大5個、`前へ`/`次へ` あり）。
 - 詳細: Markdown本文とタグを閲覧できる。管理者は編集/削除できる（削除は確認モーダル必須）。
 - Markdown Style Lab: 管理者がMarkdown表示デザインを検証できる（`/report/markdown-lab`）。
 - 新規作成: 管理者がレポートを作成し、投稿前に確認できる。
