--- a/docs/04.e2e-cases.md
+++ b/docs/04.e2e-cases.md
@@ -23,7 +23,7 @@
 
 ## 現行の自動テスト実装範囲
 - 実装ファイル: `front/tests/e2e/app.spec.ts`
-- カバー済み: TC-001, TC-002, TC-003, TC-004, TC-005, TC-006, TC-007, TC-008, TC-009, TC-010, TC-011, TC-012, TC-013, TC-014, TC-015, TC-016, TC-017, TC-018, TC-019, TC-020, TC-021, TC-022
+- カバー済み: TC-001, TC-002, TC-003, TC-004, TC-005, TC-006, TC-007, TC-008, TC-009, TC-010, TC-011, TC-012, TC-013, TC-014, TC-015, TC-016, TC-017, TC-018, TC-019, TC-020, TC-021, TC-022, TC-023, TC-024, TC-025
 - 未実装: なし
 
 ## 画面×観点マトリクス（前提/手順/期待）
@@ -49,6 +49,10 @@
   - 前提: レポートが存在
   - 手順: カードのタイトル or “Read Report” をクリック
   - 期待: `/report/:id` に遷移
+- ページング
+  - 前提: レポートが11件以上存在
+  - 手順: 「前へ」「次へ」またはページ番号を操作
+  - 期待: 1ページ10件で表示、ページ番号は最大5個表示、フィルタ変更時は1ページ目に戻る
 
 ### 詳細（/report/:id）
 - 表示
@@ -264,3 +268,18 @@
   - 前提: ログイン済
   - 手順: ヘッダーの「Markdown Lab」をクリック
   - 期待: `/report/markdown-lab` に遷移し、Pattern 07 の表示を確認できる
+
+- TC-023 正常: 一覧ページング（10件表示 + 前へ/次へ）
+  - 前提: レポートが11件以上存在
+  - 手順: `/` を開き「次へ」→「前へ」を操作
+  - 期待: 1ページ10件表示、2ページ目に遷移でき、「前へ」で1ページ目に戻る
+
+- TC-024 正常: ページ番号ボタン上限（最大5）
+  - 前提: レポートが51件以上存在
+  - 手順: `/` を開きページ番号/「次へ」を操作
+  - 期待: ページ番号ボタンは常に最大5個、最終ページでは「次へ」が無効
+
+- TC-025 正常: フィルタ変更時のページリセット
+  - 前提: ページング対象件数のレポートが存在
+  - 手順: 2ページ目へ移動後にカテゴリフィルタを適用
+  - 期待: 1ページ目へ自動で戻り、フィルタ結果の先頭10件が表示される
